--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mission Accomplie !</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #1e1e2f, #2a2a40);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
+        }
+        .container {
+            padding: 2rem;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+        }
+        h1 { color: #4CAF50; font-size: 3rem; margin-bottom: 0.5rem; }
+        p { font-size: 1.2rem; color: #ccc; }
+        .tech-stack { margin-top: 2rem; font-weight: bold; color: #00d4ff; }
+        .badge {
+            display: inline-block;
+            background: #4CAF50;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+            margin-top: 1rem;
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Mission Réussie ! 🚀</h1>
+        <p>L'image customisée a été déployée avec succès sur le cluster K3d.</p>
+        <div class="tech-stack">
+            Packer + Ansible + K3d + GitHub Codespaces
+        </div>
+        <div class="badge">Status: Online & Optimized</div>
+    </div>
+</body>
+</html>
